website/code/raytracer-icc.log
BUILD COMMANDS FOR: raytracer.icc

Fri Mar 31 22:22:19 PST 2006

/opt/intel/cc/9.0/bin/icc -O3 -ip -static -unroll  raytracer.c -o raytracer.icc_run
raytracer.c(38): error: identifier "INFINITY" is undefined
    if (disc < 0) return INFINITY;
                         ^

raytracer.c(40): error: identifier "INFINITY" is undefined
    if (t2 < 0) return INFINITY;
                       ^

raytracer.c(66): error: identifier "INFINITY" is undefined
    double lambda = INFINITY;
                    ^

compilation aborted for raytracer.c (code 2)
make[3]: [raytracer.icc_run] Error 2 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

raytracer.icc_run %A
Error, could not exec raytracer.icc_run 20 (No such file or directory)
PATH=/opt/shootout/shootout/bench/raytracer:/opt/shootout/shootout/bench/raytracer/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
